Fri Sep 28 02:57:03 2001  Christopher Faylor <cgf@cygnus.com>

	* passwd.cc (read_etc_passwd): Don't bother with locking when
	in cygwin initialization since there is only one thread.
	* grp.cc (read_etc_group): Ditto.

Fri Sep 28 01:50:09 2001  Christopher Faylor <cgf@cygnus.com>

	* pipe.cc (fhandler_pipe::hit_eof): Return correct value when there is
	no EOF event available.

Sat Sep 28 00:34:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (mmap): Move setting the access after evaluating fd.
	Remove useless comment.  Explain copy-on-write problem of 9x
	more detailed.  Don't set access to FILE_MAP_COPY on 9x only
	when anonymous mapping is requested.
	(fhandler_disk_file::mmap): Remove useless device check.
	Add debug output.

Fri Sep 27 07:35:00 2001  Robert Collins <rbtcollins@hotmail.com>

	* Makefile.in: Only stamp winver_stamp on success.

Wed Sep 26 16:02:35 2001  Christopher Faylor <cgf@cygnus.com>

	* select.cc (peek_pipe): REALLY only grab mutex when we actually got
	something from the pipe.

Tue Sep 25 21:25:00 2001  Robert Collins <rbtcollins@hotmail.com>

	* thread.cc (pthread_cond::BroadCast): Use address with verifyable_object_isvalid().
	(pthread_cond::Signal): Ditto.
	(__pthread_create): Ditto.
	(__pthread_cleanup): Ditto.
	(__pthread_attr_init): Ditto.
	(__pthread_attr_getinheritsched): Ditto.
	(__pthread_attr_getschedparam): Ditto.
	(__pthread_attr_getschedpolicy): Ditto.
	(__pthread_attr_getscope): Ditto.
	(__pthread_attr_setdetachstate): Ditto.
	(__pthread_attr_getdetachstate): Ditto.
	(__pthread_attr_setinheritsched): Ditto.
	(__pthread_attr_setschedparam): Ditto.
	(__pthread_attr_setschedpolicy): Ditto.
	(__pthread_attr_setscope): Ditto.
	(__pthread_attr_setstacksize): Ditto.
	(__pthread_attr_getstacksize): Ditto.
	(__pthread_attr_destroy): Ditto.
	(__pthread_join): Ditto.
	(__pthread_detach): Ditto.
	(__pthread_suspend): Ditto.
	(__pthread_continue): Ditto.
	(__pthread_getschedparam): Ditto.
	(__pthread_getsequence_np): Ditto.